# qt-lab-project

./: CMakeLists.txt  README.md  image_res.qrc  lab_check.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
